--- a/faq-bundle/contao/languages/lv/tl_faq_category.xlf
+++ b/faq-bundle/contao/languages/lv/tl_faq_category.xlf
@@ -3,171 +3,171 @@
     <body>
       <trans-unit id="tl_faq_category.title.0">
         <source>Title</source>
-        <target>Otsikko</target>
+        <target>Nosaukums</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.title.1">
         <source>Please enter the category title.</source>
-        <target>Ole hyvä ja anna luokalle otsikko.</target>
+        <target>Lūdzu, ievadiet kategorijas nosaukumu.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.headline.0">
         <source>Headline</source>
-        <target>Otsikko</target>
+        <target>Virsraksts</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.headline.1">
         <source>Please enter the category headline.</source>
-        <target>Ole hyvä ja anna luokalle alaotsikko.</target>
+        <target>Lūdzu, ievadiet kategorijas virsrakstu.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.jumpTo.0">
         <source>Redirect page</source>
-        <target>Uudelleenohjauksen sivu</target>
+        <target>Pārsūtīšanas lapa</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.jumpTo.1">
         <source>Please choose the FAQ reader page to which visitors will be redirected when clicking a FAQ.</source>
-        <target>Ole hyvä ja valitse UKK-lukijasivu, jolle vierailija ohjataan kysymystä klikattaessa.</target>
+        <target>Lūdzu, izvēlieties BUJ lasītāja lapu, uz kuru tiks novirzīti apmeklētāji, kad uzklikšķinās uz BUJ.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.allowComments.0">
         <source>Enable comments</source>
-        <target>Kommentointi käytössä</target>
+        <target>Iespējot komentārus</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.allowComments.1">
         <source>Allow visitors to comment FAQs.</source>
-        <target>Salli kysymysten kommentointi.ö</target>
+        <target>Atļaut apmeklētājiem komentēt BUJ.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.notify.0">
         <source>Notify</source>
-        <target>Ilmoitus</target>
+        <target>Ziņot</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.notify.1">
         <source>Please choose who to notify when comments are added.</source>
-        <target>Valitse kenelle ilmoitetaan, kun kommentit on lisätty.</target>
+        <target>Lūdzu, izvēlieties kam paziņot par komentāru pievienošanu.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.sortOrder.0">
         <source>Sort order</source>
-        <target>Lajittelujärjestys</target>
+        <target>Kārtošanas secība</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.sortOrder.1">
         <source>By default, comments are sorted ascending, starting with the oldest one.</source>
-        <target>Oletuksena kommentit on lajiteltu nousevaan järjestykseen aloittaen vanhimmasta kommentista.</target>
+        <target>Pēc noklusējuma komentāri tiek kārtoti dilstoši, sākot ar vecāko.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.perPage.0">
         <source>Comments per page</source>
-        <target>Kommentteja per sivu</target>
+        <target>Komentāri lapā</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.perPage.1">
         <source>Number of comments per page. Set to 0 to disable pagination.</source>
-        <target>Kommenttien määrä yhdellä sivulla. Aseta arvo 0, jolloin sivutus on poissa käytöstä.</target>
+        <target>Komentāru skaits lapā. Ielikt 0, lai atspējotu lapdali.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.moderate.0">
         <source>Moderate comments</source>
-        <target>Hallinnoi kommentteja</target>
+        <target>Komentāru cenzūra</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.moderate.1">
         <source>Approve comments before they are published on the website.</source>
-        <target>Hyväksy kommentit ennen kuin ne julkistetaan sivustolla.</target>
+        <target>Apstiprināt komentārus pirms tie tiek publicēti mājas lapā.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.bbcode.0">
         <source>Allow BBCode</source>
-        <target>Salli BBCode</target>
+        <target>Atļaut BBCode</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.bbcode.1">
         <source>Allow visitors to format their comments with BBCode.</source>
-        <target>Salli vierailijoiden muotoilla kommenttejaan BBCode:lla.</target>
+        <target>Atļaut apmeklētājiem lieot BBCode komentāru formatēšanai.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.requireLogin.0">
         <source>Require login to comment</source>
-        <target>Vaadi kirjautuminen kommenttien lisäämiseen</target>
+        <target>Prasīt pieslēgties, lai komentētu</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.requireLogin.1">
         <source>Allow only authenticated users to create comments.</source>
-        <target>Salli vain todennettujen käyttäjien luoda kommentteja.</target>
+        <target>Atļaut tikai reģistrētiem lietotājiem izveidot komentārus.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.disableCaptcha.0">
         <source>Disable the security question</source>
-        <target>Ota turvakysymys poisa käytöstä</target>
+        <target>Atspējot drošības jautājumu</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.disableCaptcha.1">
         <source>Use this option only if you have limited comments to authenticated users.</source>
-        <target>Käytä tätä vaihtoehtoa jos kommentointi on rajoitettu vain todennetuille käyttäjille.</target>
+        <target>Izmantojiet šo opciju tikai tad, ja jūs esat atļavis komentārus tikai reģistrētiem lietotājiem.</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.tstamp.0">
         <source>Revision date</source>
-        <target>Revisiopäivämäärä</target>
+        <target>Pārskatīšanas datums</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.tstamp.1">
         <source>Date and time of the latest revision</source>
-        <target>Revision päivämäärä ja aika</target>
+        <target>Pēdējās pārskatīšanas datums un laiks</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.title_legend">
         <source>Title and redirect</source>
-        <target>Otsikko ja edelleenohjaus</target>
+        <target>Nosaukums un pārsūtīšana</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.comments_legend">
         <source>Comments</source>
-        <target>Kommentit</target>
+        <target>Komentāri</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.notify_admin">
         <source>System administrator</source>
-        <target>Järjestelmän ylläpitäjä</target>
+        <target>Sistēmas administrators</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.notify_author">
         <source>Author of the FAQ</source>
-        <target>UKK:n tekijä</target>
+        <target>BUJ autors</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.notify_both">
         <source>Author and system administrator</source>
-        <target>Luoja ja järjestelmän ylläpitäjä</target>
+        <target>Autors un sistēmas administrators</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.deleteConfirm">
         <source>Deleting category ID %s will also delete all its FAQs! Continue?</source>
-        <target>Luokan ID %s poistaminen poistaa myös kaikki sen kysymykset! Jatketaanko?</target>
+        <target>Izdzēšot kategoriju ID %s tiks izdzēsti arī visi tās BUJi! Turpināt?</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.new.0">
         <source>New category</source>
-        <target>Uusi luokka</target>
+        <target>Jauna kategorija</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.new.1">
         <source>Create a new category</source>
-        <target>Luo uusi luokka</target>
+        <target>Izveidot jaunu kategoriju</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.show.0">
         <source>Category details</source>
-        <target>Luokan tarkemmat tiedot</target>
+        <target>Kategorijas detaļas</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.show.1">
         <source>Show the details of category ID %s</source>
-        <target>Näytä luokan ID %s tarkemmat tiedot</target>
+        <target>Rādīt kategorijas ID %s detaļas</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.edit.0">
         <source>Edit category</source>
-        <target>Muokkaa luokkaa</target>
+        <target>Rediģēt kategoriju</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.edit.1">
         <source>Edit category ID %s</source>
-        <target>Muokkaa luokkaa ID %s</target>
+        <target>Rediģēt kategoriju ID %s</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.editheader.0">
         <source>Edit category settings</source>
-        <target>Muokkaa luokan asetuksia</target>
+        <target>Rediģēt kategorijas iestatījumus</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.editheader.1">
         <source>Edit the settings of category ID %s</source>
-        <target>Muokkaa luokan ID %s asetuksia</target>
+        <target>Rediģēt kategorijas ID %s iestatījumus</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.copy.0">
         <source>Duplicate category</source>
-        <target>Kopioi luokka</target>
+        <target>Dublicēt kategoriju</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.copy.1">
         <source>Duplicate category ID %s</source>
-        <target>Kopioi luokka ID %s</target>
+        <target>Dublicēt kategoriju ID %s</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.delete.0">
         <source>Delete category</source>
-        <target>Poista luokka</target>
+        <target>Dzēst kategoriju</target>
       </trans-unit>
       <trans-unit id="tl_faq_category.delete.1">
         <source>Delete category ID %s</source>
-        <target>Poista luokka ID %s</target>
+        <target>Dzēst kategoriju ID %s</target>
       </trans-unit>
     </body>
   </file>
