--- a/core-bundle/contao/languages/en/tl_image_size.xlf
+++ b/core-bundle/contao/languages/en/tl_image_size.xlf
@@ -98,6 +98,9 @@
       <trans-unit id="tl_image_size.delete.1">
         <source>Delete image size ID %s</source>
       </trans-unit>
+      <trans-unit id="tl_image_size.picturefill">
+        <source>The &lt;em&gt;%s&lt;/em&gt; option needs to be enabled in the page layout.</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
